fixed spacing more and added more coloring. added text to side circles

--- a/css/indexnew.css
+++ b/css/indexnew.css
@@ -11,7 +11,8 @@
 }
 #section1 {
     background-color: #2F2F2F;
-	padding-left: 35%;
+	padding-left: 37%;
+	padding-top:20%;
 }
 #section2 {
     background-color: #2F2F2F;
